# interactive-flashcards

./: .gitignore  AGENTS.md  Cargo.toml  DB.md  PLAN.md  PROGRESS.md  README.md  opencode.json
flashcards/: manet.csv  wireless.csv
src/: ai_worker.rs  csv.rs  file_io.rs  lib.rs  logger.rs  main.rs  models.rs  session.rs  ui_tests.rs  utils.rs
src/ai/: client.rs  evaluator.rs  mod.rs
src/db/: chat.rs  flashcard.rs  mod.rs  session.rs
src/db/migrations/: V1__init.sql  V2__session_assessments.sql  V3__soft_delete_sessions.sql  V4__add_session_scores.sql  V5__chat_messages.sql
src/ui/: chat_popup.rs  layout.rs  menu.rs  mod.rs  quiz.rs  sessions.rs  summary.rs
src/utils/: markdown.rs
