[package]
name = "interactive-flashcards"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.28"
crossterm = { version = "0.28", features = ["event-stream"] }
rand = "0.8"
openrouter_api = "0.3"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam-channel = "0.5"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
lazy_static = "1.4"
unicode-width = "0.1"
futures = "0.3"
rusqlite = { version = "0.31", features = ["bundled"] }
refinery = { version = "0.9", features = ["rusqlite", "rusqlite-bundled"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
